<resources>
    <string name="app_name">Dodo Wallet</string>
    <string name="button_register">Register</string>
    <string name="uangsaku_saku">Saku</string>
    <string name="uangsaku_uang">Uang</string>
    <string name="hint_username">Username</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="identity_title">Identitas diri</string>
    <string name="email">Email</string>
    <string name="phonenumber">Nomor Telefon</string>
    <string name="phone_number">Phone Number</string>
    <string name="receiver_username">Username penerima</string>
    <string name="send">Kirim</string>
    <string name="authorize">Izinkan</string>
    <string name="recovery">Ambil alih akun</string>
    <string name="recover_tooltip">Masukkan kunci akun lama kamu</string>
    <string name="key">Kunci</string>
    <string name="next">Lanjut</string>
    <string name="account_found_tooltips">Akun ditemukan, setelah ini silahkan daftar seperti biasa dan nilai pada akun sebelumnya akan dipindahkan ke akunmu yang baru</string>
    <string name="accont_not_found_tooltip">Akun tidak ditemukan, silahkan mendaftarkan akun baru</string>
    <string name="register_new_account">Daftar akun baru</string>
    <string name="merge_account">Pindahkan akun</string>
    <string name="merging_tooltips">Ini akan menghapus akun lamamu dan memindahkan semua saldo ke akun sekarang</string>
    <string name="secret_tooltip">Catat dan simpan kunci ini baik-baik</string>
    <string name="go_to_main_page">Lanjut ke Halaman Utama</string>
</resources>
