<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.register.RecoverFragment">

    <data>

        <import type="android.view.View" />

        <import type="com.ta.dodo.ui.register.RecoverState" />

        <variable
            name="viewModel"
            type="com.ta.dodo.ui.register.RecoverViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="32dp">

        <TextView
            android:id="@+id/tv_recover_tooltip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/recover_tooltip"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_private_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/key"
            app:boxBackgroundColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_recover_tooltip">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:text="@={viewModel.privateKey}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_confirm_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorSecondary"
            android:onClick="@{() -> viewModel.checkAccount()}"
            android:paddingVertical="12dp"
            android:text="@string/next"
            android:visibility="@{viewModel.recoverState &lt;= RecoverState.FINDING_ACCOUNT ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_private_key" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.recoverState == RecoverState.FINDING_ACCOUNT ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_confirm_account" />

        <TextView
            android:id="@+id/tv_account_found_tooltip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/account_found_tooltips"
            android:textColor="@android:color/white"
            android:visibility="@{viewModel.recoverState == RecoverState.ACCOUNT_FOUND ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_private_key" />

        <Button
            android:id="@+id/bt_procceed_to_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorSecondary"
            android:onClick="@{() -> viewModel.mergeAccount()}"
            android:text="@string/merge_account"
            android:visibility="@{viewModel.recoverState == RecoverState.ACCOUNT_FOUND ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_account_found_tooltip" />

        <TextView
            android:id="@+id/tv_account_not_found_tooltip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/accont_not_found_tooltip"
            android:textColor="@android:color/white"
            android:visibility="@{viewModel.recoverState == RecoverState.ACCOUNT_NOT_FOUND ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_private_key" />

        <Button
            android:id="@+id/bt_not_found_procceed_to_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorSecondary"
            android:onClick="@{() -> viewModel.register()}"
            android:text="@string/register_new_account"
            android:visibility="@{viewModel.recoverState == RecoverState.ACCOUNT_NOT_FOUND ? View.VISIBLE : View.GONE}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_account_not_found_tooltip" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
